--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -1,22 +1,24 @@
 ﻿@model List<ABLCloudStaff.Models.Core>
 
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "User Board";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <h1>CloudStaff</h1>
+    <p class="lead">
+        CloudStaff is a cloud based status and location logging tool for busy consultants.
+        With this tool, busy consultants can easily communicate their status and location
+        with colleagues.
+    </p>
     <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Current CloudStaff Users</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            You'll love CloudStaff just as much as these people do.
         </p>
         @foreach(var core in @Model)
         {
@@ -25,13 +27,16 @@
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <h2>Get more features</h2>
+        <p>CloudStaff is under construction. There are exciting features on the way, but you'll have to wait.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <h2>An eye to the future</h2>
+        <p>
+            We plan for CloudStaff to tackle additional issues in more complex work environments. (namely visitors and health and safety in environments like farms, building sites etc.)
+            Watch this space!
+        </p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
