beggining ajax calls to home controller

--- a/ABLCloudStaff/ABLCloudStaff/Content/bootstrap-switch.css
+++ b/ABLCloudStaff/ABLCloudStaff/Content/bootstrap-switch.css
@@ -147,7 +147,7 @@
 .bootstrap-switch.bootstrap-switch-disabled,
 .bootstrap-switch.bootstrap-switch-readonly,
 .bootstrap-switch.bootstrap-switch-indeterminate {
-  cursor: default !important;
+  /*cursor: default !important;*/
 }
 .bootstrap-switch.bootstrap-switch-disabled .bootstrap-switch-handle-on,
 .bootstrap-switch.bootstrap-switch-readonly .bootstrap-switch-handle-on,
@@ -159,8 +159,8 @@
 .bootstrap-switch.bootstrap-switch-readonly .bootstrap-switch-label,
 .bootstrap-switch.bootstrap-switch-indeterminate .bootstrap-switch-label {
   /*opacity: 0.5;
-  filter: alpha(opacity=50);*/
-  cursor: default !important;
+  filter: alpha(opacity=50);
+  cursor: default !important; */
 }
 .bootstrap-switch.bootstrap-switch-animate .bootstrap-switch-container {
   -webkit-transition: margin-left 0.5s;
