--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -102,39 +102,21 @@
                         <form role="form">
                             <div class="form-group">
                                 <label for="usrname"><span class="glyphicon glyphicon-user"></span> Status</label>
-
+                                <br />
                                 <!-- Status Dropdown -->
-                                <div class="dropdown">
-                                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                        Dropdown
-                                        <span class="caret"></span>
-                                    </button>
-                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                        <li><a href="#">Action</a></li>
-                                        <li><a href="#">Another action</a></li>
-                                        <li><a href="#">Something else here</a></li>
-                                        <li><a href="#">Separated link</a></li>
-                                    </ul>
-                                </div>
+                                <select id="status-list">
+                                    <!-- Statuses go here. -->
+                                </select>
                                 <!-- /Status Dropdown -->
 
                             </div>
                             <div class="form-group">
                                 <label for="psw"><span class="glyphicon glyphicon-map-marker"></span> Location</label>
-
+                                <br />
                                 <!-- Location Dropdown -->
-                                <div class="dropdown">
-                                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                        Dropdown
-                                        <span class="caret"></span>
-                                    </button>
-                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                        <li><a href="#">Action</a></li>
-                                        <li><a href="#">Another action</a></li>
-                                        <li><a href="#">Something else here</a></li>
-                                        <li><a href="#">Separated link</a></li>
-                                    </ul>
-                                </div>
+                                <select id="location-list">
+                                    <!-- Locations go here. -->
+                                </select>
                                 <!-- /Location Dropdown -->
 
                             </div>
