--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -24,8 +24,6 @@
             // Init toggle switches
             $("[name='staff-state']").bootstrapSwitch();
 
-            alert("Page Reloaded")
-
         });
     </script>
 
@@ -79,6 +77,7 @@
                                     }
                                     </p>
                                 </div>
+                                <input id="userID" type="hidden" value="@core.UserID" />
                             </div>
                         </div>
                     </div>
@@ -102,7 +101,7 @@
                     </div>
                     <!-- Modal Content -->
                     <div class="modal-body" style="padding:40px 50px;">
-                        <form role="form">
+                        <form id="form-update-status-or-location" action="SubmitStatusOrLocationUpdate" method="post" role="form">
                             <div class="form-group">
                                 <label for="usrname"><span class="glyphicon glyphicon-user"></span> Status</label>
                                 <br />
@@ -111,7 +110,6 @@
                                     <!-- Statuses go here. -->
                                 </select>
                                 <!-- /Status Dropdown -->
-
                             </div>
                             <div class="form-group">
                                 <label for="psw"><span class="glyphicon glyphicon-map-marker"></span> Location</label>
@@ -121,7 +119,6 @@
                                     <!-- Locations go here. -->
                                 </select>
                                 <!-- /Location Dropdown -->
-
                             </div>
                             <button id="update-singular-user-state" type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-floppy-disk"></span> Save & Update</button>
                         </form>
