bug fix for empty selection boxes

--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -62,7 +62,7 @@
                         <div class="panel-default panel">
                             <div class="panel-heading staff-name">
                                 <p class="staff-name-text">@core.User.FirstName @core.User.LastName</p>
-                                <p><small>@core.Status.Name | @core.Location.Name</small></p>
+                                <p><small>@core.Status.Name <br /> @core.Location.Name</small></p>
                             </div>
                             <div class="panel-body">
                                 <div class="container-switch">
