--- a/ABLCloudStaff/ABLCloudStaff/Content/Site.css
+++ b/ABLCloudStaff/ABLCloudStaff/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: ThreeDDarkShadow;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -69,9 +70,9 @@ input[type="checkbox"].input-validation-error {
 .staff-modules {
     cursor: pointer;
     margin-top: 40px;
-    box-shadow:1px 1px 5px 5px #C9C9C9;
- -webkit-box-shadow:2px 2px 10px 10px #C9C9C9;
- -moz-box-shadow:2px 2px 10px 10px #C9C9C9;
+    box-shadow:1px 1px 5px 5px rgba(0,0,0,0.5);
+ -webkit-box-shadow:2px 2px 10px 10px rgba(0,0,0,0.5);
+ -moz-box-shadow:2px 2px 10px 10px rgba(0,0,0,0.5);
 }
 
 .staff-name {
