--- a/ABLCloudStaff/ABLCloudStaff/Content/Site.css
+++ b/ABLCloudStaff/ABLCloudStaff/Content/Site.css
@@ -75,7 +75,19 @@ input[type="checkbox"].input-validation-error {
  -moz-box-shadow:2px 2px 10px 10px rgba(0,0,0,0.5);
 }
 
+.staff-modules-panels {
+    background-color: lightgray;
+}
+
 .staff-name {
     white-space: nowrap;
 }
 
+/* Administration screen */
+#admin-foreground {
+    background-color: lightgray;
+}
+
+.nested-tabs {
+    width: inherit;
+}
