more of the administrator screen

--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -104,7 +104,7 @@
                                 <label for="usrname"><span class="glyphicon glyphicon-user"></span> Status</label>
                                 <br />
                                 <!-- Status Dropdown -->
-                                <select id="status-list" name="statusID">
+                                <select id="status-list" class="form-control" name="statusID">
                                     <!-- Statuses go here. -->
                                 </select>
                                 <!-- /Status Dropdown -->
@@ -113,7 +113,7 @@
                                 <label for="psw"><span class="glyphicon glyphicon-map-marker"></span> Location</label>
                                 <br />
                                 <!-- Location Dropdown -->
-                                <select id="location-list" name="locationID">
+                                <select id="location-list" class="form-control" name="locationID">
                                     <!-- Locations go here. -->
                                 </select>
                                 <!-- /Location Dropdown -->
