status and location reports

--- a/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
@@ -206,19 +206,40 @@
                                                 <!-- Table -->
                                                 <table id="status-changes-table" class="table table-striped">
                                                     <tr>
-                                                        <th>First</th>
-                                                        <th>Last</th>
+                                                        <th>First name</th>
+                                                        <th>Last name</th>
                                                         <th>Old</th>
                                                         <th>New</th>
                                                         <th>Changed</th>
                                                         <th>Initiated</th>
                                                     </tr>
+
+                                                    <!-- Status changes here. -->
+
                                                 </table>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="tab-pane" id="location-updates">
                                         <h3>Location</h3>
+                                        <div class="container nested-tabs">
+                                            <div class="panel panel-default">
+                                                <!-- Table -->
+                                                <table id="location-changes-table" class="table table-striped">
+                                                    <tr>
+                                                        <th>First name</th>
+                                                        <th>Last name</th>
+                                                        <th>Old</th>
+                                                        <th>New</th>
+                                                        <th>Changed</th>
+                                                        <th>Initiated</th>
+                                                    </tr>
+
+                                                    <!-- Location changes here. -->
+
+                                                </table>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
