--- a/ABLCloudStaff/ABLCloudStaff/Content/Site.css
+++ b/ABLCloudStaff/ABLCloudStaff/Content/Site.css
@@ -97,3 +97,6 @@ input[type="checkbox"].input-validation-error {
     background-color: lightgray;
     padding:35px 50px;
 }
+#edit-user-modal-title {
+    background-color: lightgray;
+}
