modify user functionality complete

--- a/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
@@ -285,10 +285,9 @@
                                         <input id="edit-user-lastName" type="text" name="lastName" class="form-control" disabled="disabled"/>
                                         <br />
                                         <label for="edit-user-userType">User Type</label>
-                                        <select id="edit-user-userType" name="userType">
+                                        <select id="edit-user-userType" name="userType" class="form-control">
                                             <!-- User Type options go here. -->
                                         </select>
-                                        <br />
                                         <br />
                                         <label for="edit-user-isActive">User is active:</label>
                                         <input type="checkbox" id="edit-user-isActive" name="isActive" disabled="disabled" />
